--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sharp": "^0.31.2"
+    "sharp": "^0.31.2",
+    "sitemap": "^7.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
